--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div class="btn-container">
           <button
             class="btn btn-color-2"
-            onclick="window.open('./assets/manish.pdf')"
+            onclick="window.open('https://drive.google.com/file/d/1puQ6tz4aQHD16u8xcNhp0eUeVw-NlVRY/view?usp=drive_link')"
           >
             Download CV
           </button>
